Documentation edits made through Mintlify web editor

--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -18,13 +18,13 @@ With built-in GitHub integration, live preview, testing, and deployment, Emergen
 Choose a path below to learn the platform, explore key features, and connect integrations.
 
 <Columns cols={3}>
-  <Card title="Getting Started" icon="stairs" color="#07a600" href="/introduction/getting-started">
+  <Card title="Getting Started" icon="stairs" color="#80FFF9" href="/introduction/getting-started">
     Start from zero and learn how Emergent works end-to-end.
   </Card>
-  <Card title="Features" icon="puzzle-piece" color="#07a600" href="/features/mcp">
+  <Card title="Features" icon="puzzle-piece" color="#80FFF9" href="/features/mcp">
     Explore core platform features like MCP, deployments, testing etc
   </Card>
-  <Card title="Integrations" icon="link" color="#07a600" href="/integrations/github">
+  <Card title="Integrations" icon="link" color="#80FFF9" href="/integrations/github">
     Connect GitHub, Stripe, Supabase, and external APIs in minutes.
   </Card>
   <Card title="Prompt Engineering" icon="brain" color="#07a600" href="/prompt-engineering/guide">
