Documentation edits made through Mintlify web editor

--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -27,22 +27,22 @@ Choose a path below to learn the platform, explore key features, and connect int
   <Card title="Integrations" icon="link" color="#80FFF9" href="/integrations/github">
     Connect GitHub, Stripe, Supabase, and external APIs in minutes.
   </Card>
-  <Card title="Prompt Engineering" icon="brain" color="#07a600" href="/prompt-engineering/guide">
+  <Card title="Prompt Engineering" icon="brain" color="#80FFF9" href="/prompt-engineering/guide">
     Learn effective prompting, debugging, and integration techniques.
   </Card>
-  <Card title="Use Cases" icon="lightbulb" color="#07a600" href="/use-cases/showcase">
+  <Card title="Use Cases" icon="lightbulb" color="#80FFF9" href="/use-cases/showcase">
     Discover what others have built using Emergent and get inspired.
   </Card>
-  <Card title="Tips & Tricks" icon="wand-magic-sparkles" color="#07a600" href="/tips-tricks/mastering-emergent">
+  <Card title="Tips & Tricks" icon="wand-magic-sparkles" color="#80FFF9" href="/tips-tricks/mastering-emergent">
     Improve your builds with insider tips, design ideas, and advanced tricks.
   </Card>
-  <Card title="Custom Agents" icon="robot" color="#07a600" href="/agents/overview">
+  <Card title="Custom Agents" icon="robot" color="#80FFF9" href="/agents/overview">
     Build and manage specialized AI agents for complex workflows.
   </Card>
-  <Card title="Mastering Emergent" icon="sparkles" color="#07a600" href="/introduction/plans-and-credits">
+  <Card title="Mastering Emergent" icon="sparkles" color="#80FFF9" href="/introduction/plans-and-credits">
     Understand how credits work and optimize your plan for efficiency.
   </Card>
-  <Card title="Community & Support" icon="users" color="#07a600" href="/community/discord">
+  <Card title="Community & Support" icon="users" color="#80FFF9" href="/community/discord">
     Join our Discord community and get help from our team.
   </Card>
 </Columns>
