Documentation edits made through Mintlify web editor

--- a/features/deployments.mdx
+++ b/features/deployments.mdx
@@ -1,3 +1,17 @@
-<Card title="New Card" icon="sparkles">
-  
-</Card>
+---
+title: "All About Deployment on Emergent"
+description: "The end goal of any app being built on Emergent is to launch it and share it with the world - Here's how you can do that, along with how to solve any hurdles you may face along the way."
+---
+
+## The steps in brief
+
+Here's the basics we'll cover:
+
+<Steps>
+  <Step title="Pre-Deployment Checklist" icon="list-check" iconType="regular">
+    
+  </Step>
+  <Step title="New Step">
+    
+  </Step>
+</Steps>
