--- a/introduction/plans-and-credits.mdx
+++ b/introduction/plans-and-credits.mdx
@@ -5,7 +5,7 @@ title: "Plans & Credits"
 
 ## What Are Credits?
 
-![Whatare Credits Jp](/images/WhatareCredits_.jpg)
+![Whatare Credits Jp](/whatarecredits.jpg)
 
 Credits are the core unit of work on Emergent - everything runs on them.
 
